# codeCAI

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  environment-cuda111.yml  environment-gpu2.yml  environment-gpu3.yml  eval-sample-args_cpu.txt  preproc-sample-args_cpu.txt  setup.cfg  setup.py  stats-sample-args_cpu.txt  transformerinf-debug-test-args.txt
codecai_jupyter_nli/: .dockerignore  .gitignore  .prettierignore  Dockerfile  LICENSE  MANIFEST.in  README.md  environment.yml  install.json  package.json  setup.py
codecai_jupyter_nli/.github/workflows/: build.yml
codecai_jupyter_nli/binder/: environment.yml  postBuild
codecai_jupyter_nli/src/: index.ts
codecai_jupyter_nli/style/: index.css
nl2codemodel/: .gitmodules  README.md  attention_weights-args.txt  environment-cpu.yml  environment-gpu2.yml  environment-gpu3.yml  heatmap-args.txt  setup.cfg  transformer-sample-args_cpu_test.txt  transformer-sample-args_cpu_train.txt
nl2codemodel/src/nltocode/: beamsearch.py  datamodule.py  dataset.py  inference.py  train.py  transformer.py  transformerinf.py
nl2codemodel/src/nltocode/eval/: score.py
nl2codemodel/src/nltocode/generator/: astseqgenerator.py  codegenerator.py
nl2codemodel/src/nltocode/preprocessing/: preprocdataprovider.py  preprocinf.py
nl2codemodel/src/nltocode/preprocessing/converter/: djangoconverter.py  jsonlconverter.py  juiceconverter.py  postproc_django.py
nl2codemodel/src/scads_cai_prototype/: beamsearch.py  dataprovider.py  decoder.py  encoder.py  inference.py  nl2code.py  test.py  train.py
nl2codemodel/src/scads_cai_prototype/eval/: em_eval.py  erroranalysis.py  eval.py  ggstats.py
nl2codemodel/src/scads_cai_prototype/generator/: codegenerator.py
nl2codemodel/src/scads_cai_prototype/grammar/: grammargraphloader.py  grammargraphvisitor.py
nl2codemodel/src/scads_cai_prototype/preprocessing/: clean.py  filehandling.py  preprocdataprovider.py
nl2codemodel/src/scads_cai_prototype/preprocessing/converter/: djangoconverter.py  jsonlconverter.py
nl2codemodel/src/scads_cai_prototype/preprocessing/stats/: globalstats.py  recordstats.py  statsanalysis.py
rasa/: .gitignore  config.yml  domain.yml  environment.yml  nl2code.yaml  nl2code_usecase.yaml  requirements-freeze.txt  scads_cai_prototype-0.2.0-py2.py3-none-any.whl
rasa/actions/: actions.py
rasa/data/: nlu.yml  rules.yml  stories.yml
rasa/examples/: decision_tree_classifier.csv  decision_tree_classifier.json  k_means_clustering.csv  k_means_clustering.json
scads_jupyter_nli/: .gitignore  .prettierignore  MANIFEST.in  README.md  environment.yml  install.json  package.json  setup.py
scads_jupyter_nli/.github/workflows/: build.yml
scads_jupyter_nli/binder/: environment.yml  postBuild
scads_jupyter_nli/src/: index.ts  index.tsx
scads_jupyter_nli/style/: index.css
src/nltocode/: nl2code.py  test.py
src/nltocode/eval/: attentionweights.py  erroranalysis.py  eval.py  ggstats.py
src/nltocode/preprocessing/: preproc.py  preprocdataprovider.py
src/nltocode/preprocessing/converter/: csvconverter.py
src/nltocode/preprocessing/stats/: lengthstats.py
src/scads_cai_prototype/: datamodule.py  transformer.py  transformerinf.py
src/scads_cai_prototype/eval/: attentionweights.py  heatmap.py  score.py
src/scads_cai_prototype/generator/: astseqgenerator.py
src/scads_cai_prototype/grammar/: grammargraph.py  vocabulary.py
src/scads_cai_prototype/preprocessing/: preproc.py  preprocinf.py
src/scads_cai_prototype/preprocessing/converter/: csvconverter.py  filepairconverter.py  postproc_django.py
src/scads_cai_prototype/preprocessing/stats/: lengthstats.py
