[metadata]
name = scads-cai-prototype
version = 0.2.0
description =
author = Klaudia Thellmann, Bernhard Stadler
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/KlaudiaTH/scads-cai-prototype
project-urls =
    Documentation =
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
python_requires = >=3.7
install_requires =
    torch>=1.9.0,<1.10.1
    pytorch-lightning>=1.3.8,<1.4.0
    astor==0.8.1
    networkx==2.5
    pandas>=1.1.3,<1.2.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
preproc =
    sentencepiece>=0.1.95

visualization =
    matplotlib>=3.3.0

testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    scads-cai-prototype-preproc = scads_cai_prototype.preprocessing.preproc:main
    scads-cai-prototype-preproc-inference = scads_cai_prototype.preprocessing.preprocinf:main
    scads-cai-prototype-train = scads_cai_prototype.train:main
    scads-cai-prototype-test = scads_cai_prototype.test:main
    scads-cai-prototype-inference = scads_cai_prototype.inference:main
    scads-cai-prototype-eval-bleu = scads_cai_prototype.eval.eval:main
    scads-cai-prototype-eval-em = scads_cai_prototype.eval.em_eval:main
    scads-cai-prototype-convert-csv = scads_cai_prototype.preprocessing.converter.csvconverter:main
    scads-cai-prototype-convert-django = scads_cai_prototype.preprocessing.converter.djangoconverter:main
    scads-cai-prototype-convert-filepair = scads_cai_prototype.preprocessing.converter.filepairconverter:main
    scads-cai-prototype-convert-jsonl = scads_cai_prototype.preprocessing.converter.jsonlconverter:main
    scads-cai-prototype-convert-juice = scads_cai_prototype.preprocessing.converter.juiceconverter:main
    scads-cai-prototype-postproc-django = scads_cai_prototype.preprocessing.converter.postproc_django:main
    scads-cai-prototype-stats-records = scads_cai_prototype.preprocessing.stats.globalstats:main
    scads-cai-prototype-stats-global = scads_cai_prototype.preprocessing.stats.lengthstats:main
    scads-cai-prototype-stats-length = scads_cai_prototype.preprocessing.stats.recordstats:main
    scads-cai-prototype-stats-analysis = scads_cai_prototype.preprocessing.stats.statsanalysis:main


[test]
extras = True

[tool:pytest]
addopts =
    --cov scads-cai-prototype --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
    tranX
    conala-baseline
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
