[metadata]
name = nltocode
version = 0.2.0
description =
author = Klaudia Thellmann, Bernhard Stadler
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
#url =
project-urls =
    Documentation =
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
python_requires = >=3.7
install_requires =
    torch>=1.9.0,<1.10.1
    pytorch-lightning>=1.3.8,<1.4.0
    astor==0.8.1
    networkx==2.5
    pandas>=1.1.3,<1.2.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
preproc =
    sentencepiece>=0.1.95

visualization =
    matplotlib>=3.3.0

testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    nltocode-preproc = nltocode.preprocessing.preproc:main
    nltocode-preproc-inference = nltocode.preprocessing.preprocinf:main
    nltocode-train = nltocode.train:main
    nltocode-test = nltocode.test:main
    nltocode-inference = nltocode.inference:main
    nltocode-eval-bleu = nltocode.eval.eval:main
    nltocode-eval-em = nltocode.eval.em_eval:main
    nltocode-convert-csv = nltocode.preprocessing.converter.csvconverter:main
    nltocode-convert-django = nltocode.preprocessing.converter.djangoconverter:main
    nltocode-convert-filepair = nltocode.preprocessing.converter.filepairconverter:main
    nltocode-convert-jsonl = nltocode.preprocessing.converter.jsonlconverter:main
    nltocode-convert-juice = nltocode.preprocessing.converter.juiceconverter:main
    nltocode-postproc-django = nltocode.preprocessing.converter.postproc_django:main
    nltocode-stats-records = nltocode.preprocessing.stats.globalstats:main
    nltocode-stats-global = nltocode.preprocessing.stats.lengthstats:main
    nltocode-stats-length = nltocode.preprocessing.stats.recordstats:main
    nltocode-stats-analysis = nltocode.preprocessing.stats.statsanalysis:main


[test]
extras = True

[tool:pytest]
addopts =
    --cov nltocode --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
    tranX
    conala-baseline
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
